syntax = "proto3";

package com.example.grpcapi.reqres.order;

import "com/example/commonmodels/error.proto";
import "com/example/commonmodels/order/order.proto";
import "com/example/commonmodels/order/order_item.proto";
import "com/example/commonmodels/order/shipment_details.proto";

option java_multiple_files = true;

message CreateOrderRequest {
    repeated commonmodels.order.OrderItem items = 1;
    commonmodels.order.ShipmentDetails shipment_details = 2;
    string user_id = 3;
}

message CreateOrderResponse {
    oneof response {
        Success success = 1;
        Failure failure = 2;
    }

    message Success {
        commonmodels.order.Order order = 1;
    }

    message Failure {
        string message = 100;
        oneof error {
            commonmodels.Error user_not_found = 1;
            commonmodels.Error product_not_found = 2;
            commonmodels.Error product_not_sufficient_amount = 3;
        }
    }
}
