syntax = "proto3";

package com.example.internal.input.reqreply.order.delete;

import "com/example/internal/commonmodels/error.proto";

option java_multiple_files = true;

message DeleteOrderRequest {
    string id = 1;
}

message DeleteOrderResponse {
    oneof response {
        Success success = 1;
        Failure failure = 2;
    }

    message Success {}

    message Failure {
        string message = 100;
        optional commonmodels.Error error = 1;
    }
}
