syntax = "proto3";

package com.example.internal.input.reqreply.order.update_status;

import "com/example/internal/commonmodels/error.proto";
import "com/example/internal/commonmodels/order/order.proto";

option java_multiple_files = true;

message UpdateOrderStatusRequest {
    string id = 1;
    string status = 2;
}

message UpdateOrderStatusResponse {
    oneof response {
        Success success = 1;
        Failure failure = 2;
    }

    message Success {
        commonmodels.order.order.Order order = 1;
    }

    message Failure {
        string message = 100;
        oneof error {
            commonmodels.Error order_not_found = 1;
        }
    }
}
